--- a/about.css
+++ b/about.css
@@ -111,3 +111,22 @@ background-color: grey;
 background-color: grey;
 
 }
+.bg10{
+
+  background-image: url(./img/banner-2.jpg) !important;
+  width: 100%;
+  height: 300px;
+}
+#text{
+  padding-top: 50px;
+  padding-left: 50px;
+}
+#text1{
+  padding-top: -11px;
+  padding-left: 50px;   
+}
+#text3{
+  padding-top: -11px;
+  padding-left: 852px;
+  font-size: 30px;
+}
